Fix stupid layout issue

--- a/assets/_sass/_style.scss
+++ b/assets/_sass/_style.scss
@@ -92,7 +92,7 @@ p.separator {
 /* Begin Fancy CSS */
 
 
-body {
+header {
   display:flex;
   justify-content: center;
 }
